--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
         
-     	 <div id="box">
+     	 <div id"search">
            <h1 id="title">Write something in the box</h1>
 	            <p>Enter some text in the box below then click the 'Click Me' Button'</p>
 	            <input type="text" id="myTextBox"/>
