--- a/thegame.html
+++ b/thegame.html
@@ -120,7 +120,7 @@
 		</style>
 	</head>
 	<body>
-	<img src="title.png" height="50" width="50">
+	<img src="back2.png" height="50" width="50">
 	<div id="box2">
 		<h1 class="header">The Game</h1>
 		<div class="content">
