--- a/thegame.html
+++ b/thegame.html
@@ -133,6 +133,7 @@
 			</div>
 		</div>
 		<p class="footer">&laquo; created with <a href="http://unity3d.com/unity/" title="Go to unity3d.com">Unity</a> &raquo;</p>
+	<p>Song "All of us" By Erik Skiff</p>
 	</div>	
 	</body>
 </html>
