--- a/thegame.html
+++ b/thegame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<link rel="shortcut icon" type="image/png" href="log2.png"/>
+	<link rel="shortcut icon" type="image/png" href="log2.png"/>
 
 	    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -119,9 +119,9 @@
 		
 		</style>
 	</head>
-	<body>
+	<body><a href="index.html">
 	<img src="back2.png" height="50" width="50">
-	<div id="box2">
+	<div id="box2"></a>
 		<h1 class="header">The Game</h1>
 		<div class="content">
 			<div id="unityPlayer">
