--- a/thegame.html
+++ b/thegame.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-	<link rel="shortcut icon" type="image/png" href="log2.png"/>
+	<link rel="shortcut icon" type="image/png" href="logo2.png"/>
 
 	    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
