--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           I am at Coolest Projects now
         </h2>
            <p>
-                  I am exited
+                  I am excited
         </p>
         <p>
            I did all this BY MY SELF
